# 240-mp-jellyfin

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  JELLYFIN_MAC_FORK_PLAN.md  Main.qml  README.md  ROADMAP.md  SECURITY.md
.codex/environments/: environment.toml
.github/workflows/: recover-dmg-notarization.yml  release.yml
cmake/: BundledHelpers.cmake
modules/ambient_mode/: manifest.json
modules/ambient_mode/views/: Items.qml  PlaybackSelectorRow.qml  Player.qml
modules/jellyfin/: manifest.json
modules/jellyfin/views/: Auth.qml  Detail.qml  Items.qml  JellyfinMedia.js  Libraries.qml  Player.qml  Root.qml
modules/karaoke/: manifest.json
modules/karaoke/views/: Items.qml  Player.qml  Root.qml
modules/local_files/: manifest.json
modules/local_files/views/: Detail.qml  Items.qml  Player.qml
modules/plex/: manifest.json
modules/retro_tv/: manifest.json
modules/retro_tv/views/: Items.qml  Player.qml  RetroTvData.js  Root.qml
modules/tumblr_screensaver/: manifest.json
modules/tumblr_screensaver/views/: Items.qml  Player.qml  Root.qml  TumblrMedia.qml
packaging/: yt-dlp.entitlements
script/: build_and_run.sh
scripts/: macos_bundle_tool_deps.zsh  macos_prune_qt_deployment.zsh  macos_verify_bundle.zsh  media-keys.lua  mpv-osc.lua  screensaver.lua
src/: AppCore.cpp  AppCore.h  macos_utils.h  macos_utils.mm  main.cpp
src/input/: IdleTracker.cpp  IdleTracker.h  InputManager.h  InputManager.mm
src/modules/ambient_mode/: AmbientModeBackend.cpp  AmbientModeBackend.h
src/modules/jellyfin/: JellyfinBackend.cpp  JellyfinBackend.h
src/modules/karaoke/: KaraokeBackend.cpp  KaraokeBackend.h
src/modules/local_files/: LocalFilesBackend.cpp  LocalFilesBackend.h
src/modules/tumblr_screensaver/: TumblrScreensaverBackend.cpp  TumblrScreensaverBackend.h
src/player/: MpvController.cpp  MpvController.h
src/tools/: HelperResolver.cpp  HelperResolver.h
src/update/: UpdateManager.cpp  UpdateManager.h
tests/: AmbientModeBackendTest.cpp  AmbientModeQmlTest.cpp  AppCoreTest.cpp  JellyfinBackendTest.cpp  KaraokeBackendTest.cpp  LocalFilesBackendTest.cpp  TumblrMediaQmlTest.cpp  TumblrScreensaverBackendTest.cpp  UpdateManagerTest.cpp
views/: DirectoryBrowser.qml  ModuleSettings.qml  Settings.qml  Update.qml
views/Components/: AppBar.qml  ConfirmDialog.qml  PlaybackControlPanel.qml  PlaybackTransitionOverlay.qml  SelectableMarqueeRow.qml  TextSearch.qml  TransitionMath.qml  qmldir
